[package]
name = "tree-sitter-openfga"
description = "Tree-sitter parser for the OpenFGA Configuration DSL"
version = "0.0.1"
authors = ["sebb3 <mail@sebbe.cc>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "openfga"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/sebb3/tree-sitter-openfga"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
